--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<h1 class="name">Speed Link</h1>
 			</div>
 			<div class="header-content">
-				<a href="tracking" class="cta-btn">أريد تتبع طلبي</a>
+				<a href="#tracking" class="cta-btn">أريد تتبع طلبي</a>
 			</div>
 		</header>
 
@@ -44,9 +44,6 @@
 		</section>
 
 		<section class="about">
-			<div class="about-img">
-				<img src="images/about-img.png" alt="about us" />
-			</div>
 			<div class="about-content">
 				<h2>من نحن</h2>
 				<p>
@@ -61,6 +58,9 @@
 					تقديم أفضل الحلول والخدمات للعملاء بكفاءة ومهنية. نشكركم على دعمكم
 					وثقتكم بنا، ونتطلع إلى خدمتكم والعمل معكم في المستقبل.
 				</p>
+			</div>
+			<div class="about-img">
+				<img src="images/about-img.png" alt="about us" />
 			</div>
 		</section>
 
@@ -97,7 +97,7 @@
 		<section class="product-tracking" id="tracking">
 			<h2>تتبع الطلبية</h2>
 			<p>أدخل رقم الطلبية لمتابعة حالة شحنتك:</p>
-			<form class="tracking-form">
+			<form class="tracking-form" action="product.html">
 				<input type="text" placeholder="رقم الطلبية" />
 				<button type="submit">تتبع</button>
 			</form>
