--- a/product.html
+++ b/product.html
@@ -34,10 +34,11 @@
 				<div class="header-content">
 					<p>رقم الشحنة</p>
 					<p>المشحون إليه</p>
-					<button class="cta-btn">إيقاف الشحن</button>
 				</div>
 			</header>
-
+			<!-- <center>
+				<button class="cta-btn">إيقاف الشحن</button>
+			</center> -->
 			<div class="status-list">
 				<div class="status-item active">
 					<div class="status-content">
