--- a/dashboard.html
+++ b/dashboard.html
@@ -35,6 +35,12 @@
 			</div>
 		</header>
 		<div class="container">
+			<center>
+				<h2>
+					Welcome,
+					<span>Admin</span>
+				</h2>
+			</center>
 			<div class="grid-container">
 				<div class="card">
 					<img src="images/hero-img.png" alt="Image 1" />
