--- a/charts.html
+++ b/charts.html
@@ -36,14 +36,37 @@
 			</header>
 
 			<div class="canvas-container">
+				<div class="myChartValues">
+					<p>22</p>
+					<p>10</p>
+					<p>8</p>
+					<p>20</p>
+					<p>15</p>
+					<p>8</p>
+					<p>12</p>
+					<p>5</p>
+				</div>
 				<canvas id="myChart" style="width: 100%; max-width: 600px"></canvas>
+				<div class="myChartValues02">
+					<p>22</p>
+					<p>10</p>
+					<p>8</p>
+					<p>20</p>
+					<p>15</p>
+					<p>8</p>
+					<p>12</p>
+					<p>5</p>
+				</div>
 				<canvas id="myChart02" style="width: 100%; max-width: 600px"></canvas>
 				<canvas id="myChart03" style="width: 100%; max-width: 600px"></canvas>
 			</div>
 
 			<script>
 				var xValues = ['01', '02', '03', '04', '05', '06', '07', '08'];
-				var yValues = [10, 17, 20, 20, 15, 5, 10, 3];
+				var yValues = [];
+				document.querySelectorAll('.myChartValues p').forEach((element) => {
+					yValues.push(element.innerHTML);
+				});
 				var barColors = [
 					'#b91d47',
 					'#00aba9',
@@ -67,16 +90,20 @@
 						],
 					},
 					options: {
+						legend: false,
 						title: {
-							display: true,
+							display: false,
 							text: 'World Wide Wine Production 2018',
 						},
 					},
 				});
 			</script>
 			<script>
-				var xValues = ['01', '02', '03', '04', '05', '06', '07', '08'];
-				var yValues = [10, 17, 20, 20, 15, 5, 10, 3];
+				var xValues02 = ['01', '02', '03', '04', '05', '06', '07', '08'];
+				var yValues02 = [];
+				document.querySelectorAll('.myChartValues02 p').forEach((element) => {
+					yValues02.push(element.innerHTML);
+				});
 				var barColors = [
 					'#b91d47',
 					'#00aba9',
@@ -91,17 +118,19 @@
 				new Chart('myChart02', {
 					type: 'pie',
 					data: {
-						labels: xValues,
+						labels: xValues02,
 						datasets: [
 							{
 								backgroundColor: barColors,
-								data: yValues,
+								data: yValues02,
 							},
 						],
 					},
 					options: {
+						legend: false,
+
 						title: {
-							display: true,
+							display: false,
 							text: 'World Wide Wine Production 2018',
 						},
 					},
@@ -128,7 +157,7 @@
 					options: {
 						legend: { display: false },
 						title: {
-							display: true,
+							display: false,
 							text: 'y = x * 2 + 7',
 							fontSize: 16,
 						},
