--- a/add-shohna.html
+++ b/add-shohna.html
@@ -87,15 +87,14 @@
 							<option value="الواحات البحرية">الواحات البحرية</option>
 							<option value="مطروح">مطروح</option>
 						</select>
-						<div class="radio">
-							<label for="type">
-								<p>دليفري</p>
-
-								<input type="radio" name="type" value="دليفري" />
+						<div class="checkbox">
+							<label for="check01">
+								<span>دليفري</span>
+								<input type="checkbox" name="check01" />
 							</label>
-							<label for="type">
-								<p>اشحن لي</p>
-								<input type="radio" name="type" value="اشحن لي" />
+							<label for="check02">
+								<span>اشحن لي</span>
+								<input type="checkbox" name="check02" />
 							</label>
 						</div>
 						<button type="submit">إرسال</button>
